--- a/fractal.css
+++ b/fractal.css
@@ -36,7 +36,7 @@ button:hover {
 button:active {
 	background: #ccc;
 }
-button:disabled, input:disabled {
+button:disabled, input:disabled, button:hover:disabled, button:active:disabled {
 	opacity: 0.6;
 }
 button#submit {
